--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: 'Noto Sans JP', sans-serif;
-}
-
-body {
+/* body {
   margin: 0;
   background-color: #3f3f3f;
-}
+} */
 
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+ 
+html {
+  font-family: 'Noto Sans JP', sans-serif;
+  /* This defines what 1rem is */
+  font-size: 62.5%; /* 1 rem = 10px; 10px/16px = 62.5% */
+ 
+    /* // @include respond(tab-land) { // width < 1200?
+    //     font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    // }
+ 
+    // @include respond(tab-port) { // width < 900?
+    //     font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    // }
+    
+    // @include respond(big-desktop) {
+    //     font-size: 75%; //1rem = 12, 12/16
+    // } */
+}
+ 
+body {
+    box-sizing: border-box;
+    background-color: #3f3f3f;
+    /* // @include respond(tab-port) {
+    //     padding: 0;
+    // } */
+}
