add basic cart popup

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,10 +10,9 @@
   
   .modal {
     position: fixed;
-    top: 20vh;
-    left: 5%;
-    width: 90%;
-    background-color: white;
+    //top: 20vh;
+    //left: 5%;
+    //width: 90%;
     padding: 1rem;
     border-radius: 14px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -22,10 +21,10 @@
   }
   
   @media (min-width: 768px) {
-    .modal {
-      width: 40rem;
-      left: calc(50% - 20rem);
-    }
+    // .modal {
+    //   width: 40rem;
+    //   left: calc(50% - 20rem);
+    // }
   }
   
   @keyframes slide-down {
