--- a/src/components/Cart/CartList.module.scss
+++ b/src/components/Cart/CartList.module.scss
@@ -1,3 +1,38 @@
 .cartlist {
     font-size: 1.6rem;
 }
+
+.order {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1.5rem;
+    font-size: 2rem;
+  
+    &__button {
+      display: flex;
+      justify-content: flex-end;
+  
+      button {
+        cursor: pointer;
+        margin: 2rem 0 1rem 0;
+        padding: 1rem 3rem;
+        border-radius: 25px;
+        margin-left: 1rem;
+        border: 1px solid;
+        font-size: 1.75rem;
+      }
+  
+      &__two {
+        background-color: white;
+        border-color: #8a2b06;
+        color: #8a2b06;
+      }
+  
+      &__one {
+        background-color: #8a2b06;
+        border-color: #5a1a01;
+        color: white;
+      }
+    }
+  }
+  
